# manage-digital-ingest-flet-CollectionBuilder

./: BUILD.md  DISTRIBUTION_GUIDE.md  FLET_BUILD_SETUP.md  HISTORY.md  INSTALL_XCODE.md  PARENT-CHILD-CHANGES.md  README.md  TRANSCRIPT_AUTO_FIX.md  app.py  build-macos.sh  extract_mdi_badge.py  gdp-oh-metadata-fields-11-23-25.csv  pyproject.toml  transcript_fixer.py  utils.py
_data/: persistent.json
_data/transcripts/: sample_interview.csv  test_semicolon.csv
assets/: ICON_README.md
utilities/: QUICKSTART.md  README.md  fix_transcripts.py
views/: derivatives_view.py  file_selector_view.py  instructions_view.py  settings_view.py  storage_view.py  update_csv_view.py
