[project]
name = "manage-digital-ingest"
version = "1.0.0"
description = "Manage Digital Ingest - CollectionBuilder metadata and derivative management tool"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Digital Grinnell", email = "digital@grinnell.edu" }
]
dependencies = [
    "flet>=0.28.2",
]

# Note: For web builds, many packages are not available in Pyodide.
# Full dependencies are in python-requirements.txt for desktop/development use.

[tool.flet]
org = "edu.grinnell.digital"
product = "Manage Digital Ingest"
company = "Digital Grinnell"
copyright = "Copyright (C) 2025 Digital Grinnell"

[tool.flet.app]
path = "."
module = "app"

# Exclude packages that cause Android/iOS build issues
[tool.flet.flutter.dependencies]
webview_flutter_android = { git = { url = "https://github.com/flutter/packages", path = "packages/webview_flutter/webview_flutter_android", ref = "main" } }
webview_flutter_wkwebview = { git = { url = "https://github.com/flutter/packages", path = "packages/webview_flutter/webview_flutter_wkwebview", ref = "main" } }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
